--- a/esphome/everything-presence-one-708114.yaml
+++ b/esphome/everything-presence-one-708114.yaml
@@ -1,8 +1,13 @@
 substitutions:
   name: everything-presence-one-708114
   friendly_name: "Capteur Presence Chambre"
+
 packages:
-  Everything_Smart_Technology.Everything_Presence_One: github://everythingsmarthome/presence-one/everything-presence-one.yaml@main
+  Everything_Smart_Technology.Everything_Presence_One: 
+    url: https://github.com/EverythingSmartHome/everything-presence-one
+    file: everything-presence-one.yaml
+    refresh: 0s
+    
 esphome:
   name: ${name}
   friendly_name: ${friendly_name}
