--- a/esphome/everything-presence-one-7085ac.yaml
+++ b/esphome/everything-presence-one-7085ac.yaml
@@ -1,12 +1,18 @@
 substitutions:
   name: everything-presence-one-7085ac
   friendly_name: "Capteur Presence Bureau"
+
 packages:
-  Everything_Smart_Technology.Everything_Presence_One: github://everythingsmarthome/presence-one/everything-presence-one.yaml@main
+  Everything_Smart_Technology.Everything_Presence_One: 
+    url: https://github.com/EverythingSmartHome/everything-presence-one
+    file: everything-presence-one.yaml
+    refresh: 0s
+
 esphome:
   name: ${name}
   friendly_name: ${friendly_name}
   name_add_mac_suffix: false
+  
 api:
   encryption:
     key: !secret everything-presence-one-7085ac-api-encryption-key
