--- a/automations.yaml
+++ b/automations.yaml
@@ -474,6 +474,11 @@
   - condition: state
     entity_id: input_boolean.automation_watch_tv
     state: 'on'
+  - condition: not
+    conditions:
+    - condition: state
+      entity_id: media_player.music_assistant_salon
+      state: playing
   action:
   - choose:
     - conditions:
@@ -1739,9 +1744,12 @@
     to: 'off'
   - platform: state
     entity_id:
-    - sensor.meme_rapport_engage
-    from: d
-    to: p
+    - device_tracker.meme_emplacement
+    to: home
+    for:
+      hours: 0
+      minutes: 1
+      seconds: 0
   condition:
   - condition: state
     entity_id: input_boolean.automation_tesla
@@ -1836,7 +1844,8 @@
       entity_id: person.jenova70
       device_tracker:
       - device_tracker.meme_emplacement
-  mode: single
+  mode: queued
+  max: 10
 - id: '1698182832051'
   alias: TV intelligente - Activer / Désactiver Micros
   description: ''
@@ -3237,22 +3246,8 @@
   trigger:
   - platform: state
     entity_id:
-    - device_tracker.meme_destination
+    - device_tracker.meme_emplacement
     from:
-    to:
-  - platform: state
-    entity_id:
-    - sensor.meme_distance_jusqu_a_l_arrivee
-    from:
-    to:
-  - platform: state
-    entity_id:
-    - input_boolean.transfert_musique_tesla_vers_maison
-    from:
-    to:
-  - platform: state
-    entity_id:
-    - binary_sensor.tesla_recent_playback
     to:
   condition:
   - condition: state
@@ -3264,21 +3259,15 @@
   - condition: state
     entity_id: input_boolean.guest_mode
     state: 'off'
-  - condition: state
-    entity_id: binary_sensor.home_occupied
-    state: 'off'
   action:
   - choose:
     - conditions:
       - condition: state
-        entity_id: device_tracker.meme_destination
+        entity_id: device_tracker.meme_emplacement
         state: home
       - condition: state
-        entity_id: binary_sensor.tesla_recent_playback
-        state: 'on'
-      - condition: numeric_state
-        entity_id: sensor.meme_distance_jusqu_a_l_arrivee
-        below: 2
+        entity_id: media_player.meme_lecteur_multimedia
+        state: playing
       sequence:
       - service: media_player.turn_on
         metadata: {}
@@ -3291,6 +3280,12 @@
         metadata: {}
         data:
           source: Wifi
+        target:
+          entity_id: media_player.kef
+      - service: media_player.volume_set
+        metadata: {}
+        data:
+          volume_level: 0.65
         target:
           entity_id: media_player.kef
     default:
@@ -3384,3 +3379,66 @@
         - media_player.music_assistant_salon
   mode: queued
   max: 10
+- id: '1719771128107'
+  alias: Tesla - Détacher Tesla à JL en fin de conduite (Backup)
+  description: ''
+  trigger:
+  - platform: state
+    entity_id:
+    - binary_sensor.meme_conducteur
+    to: 'off'
+  condition:
+  - condition: state
+    entity_id: input_boolean.automation_tesla
+    state: 'on'
+  - condition: state
+    entity_id: input_boolean.jl_connected_to_tesla
+    state: 'on'
+  action:
+  - service: input_boolean.turn_off
+    metadata: {}
+    data: {}
+    target:
+      entity_id: input_boolean.jl_connected_to_tesla
+  mode: queued
+  max: 10
+- id: '1719820004780'
+  alias: Réduire volume lorsque assistant vocal en écoute (Bureau)
+  description: ''
+  use_blueprint:
+    path: perso/reduce_volume_of_media_player_when_voice_assistant_listening.yaml
+    input:
+      assist_in_progress_binary_sensor: binary_sensor.hal_assist_en_cours
+      media_player: media_player.bureau_sonos_music_assistant
+      threshold_volume: 0.2
+      listening_volume: 0.1
+- id: '1719820593325'
+  alias: Réduire volume lorsque assistant vocal en écoute (Chambre Marilou)
+  description: ''
+  use_blueprint:
+    path: perso/reduce_volume_of_media_player_when_voice_assistant_listening.yaml
+    input:
+      assist_in_progress_binary_sensor: binary_sensor.talkie_assist_en_cours
+      media_player: media_player.sonos_chambre_marilou
+      threshold_volume: 0.2
+      listening_volume: 0.1
+- id: '1719820631777'
+  alias: Réduire volume lorsque assistant vocal en écoute (Chambre)
+  description: ''
+  use_blueprint:
+    path: perso/reduce_volume_of_media_player_when_voice_assistant_listening.yaml
+    input:
+      assist_in_progress_binary_sensor: binary_sensor.box_chambre_assist_en_cours
+      media_player: media_player.sonos_chambre
+      threshold_volume: 0.2
+      listening_volume: 0.1
+- id: '1719820718219'
+  alias: Réduire volume lorsque assistant vocal en écoute (Salon)
+  description: ''
+  use_blueprint:
+    path: perso/reduce_volume_of_media_player_when_voice_assistant_listening.yaml
+    input:
+      assist_in_progress_binary_sensor: binary_sensor.wyoming_satellite_salon_assist_en_cours
+      media_player: media_player.kef
+      listening_volume: 0.3
+      threshold_volume: 0.4
